test/binary/02-port-parameters.stderr
error[E0277]: the trait bound `(u8, Reset): ElicitsResponse` is not satisfied
   --> test/binary/02-port-parameters.rs:9:24
    |
9   |     let _ = port.tx_rx((0, RESET))?;  // Shouldn't work with tx_rx
    |                  ----- ^^^^^^^^^^ the trait `ElicitsResponse` is not implemented for `(u8, Reset)`
    |                  |
    |                  required by a bound introduced by this call
    |
    = help: the following implementations were found:
              <(u8, Activate) as ElicitsResponse>
              <(u8, ConvertToAscii) as ElicitsResponse>
              <(u8, EchoData) as ElicitsResponse>
              <(u8, Home) as ElicitsResponse>
            and 74 others
note: required by a bound in `zproto::binary::Port::<B>::tx_rx`
   --> src/binary/port.rs
    |
    |         M: traits::TxMessage + traits::ElicitsResponse,
    |                                ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `zproto::binary::Port::<B>::tx_rx`

error[E0277]: the trait bound `Home: TakesData<i32>` is not satisfied
   --> test/binary/02-port-parameters.rs:10:24
    |
10  |     let _ = port.tx_rx((0, HOME, 0i32))?;  // Shouldn't take parameters
    |                  ----- ^^^^^^^^^^^^^^^ the trait `TakesData<i32>` is not implemented for `Home`
    |                  |
    |                  required by a bound introduced by this call
    |
    = note: required because of the requirements on the impl of `TxMessage` for `(u8, Home, i32)`
note: required by a bound in `zproto::binary::Port::<B>::tx_rx`
   --> src/binary/port.rs
    |
    |         M: traits::TxMessage + traits::ElicitsResponse,
    |            ^^^^^^^^^^^^^^^^^ required by this bound in `zproto::binary::Port::<B>::tx_rx`

error[E0277]: the trait bound `MoveAbsolute: TakesNoData` is not satisfied
   --> test/binary/02-port-parameters.rs:11:24
    |
11  |     let _ = port.tx_rx((0, MOVE_ABSOLUTE))?;  // Should take parameters
    |                  ----- ^^^^^^^^^^^^^^^^^^ the trait `TakesNoData` is not implemented for `MoveAbsolute`
    |                  |
    |                  required by a bound introduced by this call
    |
    = note: required because of the requirements on the impl of `TxMessage` for `(u8, MoveAbsolute)`
note: required by a bound in `zproto::binary::Port::<B>::tx_rx`
   --> src/binary/port.rs
    |
    |         M: traits::TxMessage + traits::ElicitsResponse,
    |            ^^^^^^^^^^^^^^^^^ required by this bound in `zproto::binary::Port::<B>::tx_rx`

error[E0277]: the trait bound `MoveAbsolute: TakesData<bool>` is not satisfied
   --> test/binary/02-port-parameters.rs:12:24
    |
12  |     let _ = port.tx_rx((0, MOVE_ABSOLUTE, false))?;  // Wrong parameter type
    |                  ----- ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `TakesData<bool>` is not implemented for `MoveAbsolute`
    |                  |
    |                  required by a bound introduced by this call
    |
    = help: the following implementations were found:
              <MoveAbsolute as TakesData<i32>>
    = note: required because of the requirements on the impl of `TxMessage` for `(u8, MoveAbsolute, bool)`
note: required by a bound in `zproto::binary::Port::<B>::tx_rx`
   --> src/binary/port.rs
    |
    |         M: traits::TxMessage + traits::ElicitsResponse,
    |            ^^^^^^^^^^^^^^^^^ required by this bound in `zproto::binary::Port::<B>::tx_rx`

error[E0277]: the trait bound `u8: TakesNoData` is not satisfied
   --> test/binary/02-port-parameters.rs:14:24
    |
14  |     let _ = port.tx_rx((0, untyped::HOME))?;  // u8 commands require an explicit data value
    |                  ----- ^^^^^^^^^^^^^^^^^^ the trait `TakesNoData` is not implemented for `u8`
    |                  |
    |                  required by a bound introduced by this call
    |
    = note: required because of the requirements on the impl of `TxMessage` for `(u8, u8)`
note: required by a bound in `zproto::binary::Port::<B>::tx_rx`
   --> src/binary/port.rs
    |
    |         M: traits::TxMessage + traits::ElicitsResponse,
    |            ^^^^^^^^^^^^^^^^^ required by this bound in `zproto::binary::Port::<B>::tx_rx`

error[E0277]: the trait bound `zproto::binary::command::types::Error: TakesNoData` is not satisfied
   --> test/binary/02-port-parameters.rs:16:13
    |
16  |     port.tx((0, ERROR))?;  // Reply-only commands cannot be transmitted
    |          -- ^^^^^^^^^^ the trait `TakesNoData` is not implemented for `zproto::binary::command::types::Error`
    |          |
    |          required by a bound introduced by this call
    |
    = note: required because of the requirements on the impl of `TxMessage` for `(u8, zproto::binary::command::types::Error)`
note: required by a bound in `zproto::binary::Port::<B>::tx`
   --> src/binary/port.rs
    |
    |     pub fn tx<M: traits::TxMessage>(&mut self, message: M) -> Result<Option<u8>, BinaryError> {
    |                  ^^^^^^^^^^^^^^^^^ required by this bound in `zproto::binary::Port::<B>::tx`

error[E0277]: the trait bound `zproto::binary::command::types::Error: TakesData<i32>` is not satisfied
   --> test/binary/02-port-parameters.rs:17:13
    |
17  |     port.tx((0, ERROR, 0i32))?;  // Reply-only commands cannot be transmitted
    |          -- ^^^^^^^^^^^^^^^^ the trait `TakesData<i32>` is not implemented for `zproto::binary::command::types::Error`
    |          |
    |          required by a bound introduced by this call
    |
    = note: required because of the requirements on the impl of `TxMessage` for `(u8, zproto::binary::command::types::Error, i32)`
note: required by a bound in `zproto::binary::Port::<B>::tx`
   --> src/binary/port.rs
    |
    |     pub fn tx<M: traits::TxMessage>(&mut self, message: M) -> Result<Option<u8>, BinaryError> {
    |                  ^^^^^^^^^^^^^^^^^ required by this bound in `zproto::binary::Port::<B>::tx`
